Add prettier and format templates

--- a/templates/express/typescript/tsconfig.json
+++ b/templates/express/typescript/tsconfig.json
@@ -5,6 +5,7 @@
         "moduleResolution": "Node",
         "strict": true,
         "skipLibCheck": true,
-        "types": ["node"]
+        "types": ["node"],
+        "allowSyntheticDefaultImports": true
     }
 }
